Removed page links and added font awesome social media icons.

--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -1,23 +1,15 @@
 <div class="footer">
 	<div class="row">
-		<div class="col-sm-4 col-xs-12">
+		<div class="col-sm-12">
+	        <i class="fa fa-facebook-square"></i>
+	        <i class="fa fa-instagram"></i>
+	        <i class="fa fa-github-square"></i>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-12">
 			<h5>Images owned by Jacquelyn Carver.</h5>
 			<h5>&copy;Jacquelyn Carver 2016</h5>
-		</div>
-		<div class="col-sm-4 col-xs-12">
-			<ul>
-				<li><h4><%= link_to 'Programming', 'programming_resume.html' %></h4></li>
-	            <li><h4><%= link_to 'General', 'general_resume.html' %></h4></li>
-	            <li><h4><%= link_to 'Yoga', 'yoga_resume.html' %></h4></li>
-	            <li><h4><%= link_to 'Writing', 'writing_resume.html' %></h4></li>
-	        </ul>
-		</div>
-		<div class="col-sm-4 col-xs-12">
-			<ul>
-				<li><h4><%= link_to 'About Me', 'about.html' %></h4></li>
-				<li><h4><%= link_to 'Home', '/' %></h4></li>
-				<li><span class="glyphicon glyphicon-facebook"></span></li>
-	        </ul>
 		</div>
 	</div>
 </div>
