--- a/source/stylesheets/_header.scss
+++ b/source/stylesheets/_header.scss
@@ -3,6 +3,7 @@ nav.navbar.navbar-default {
 
 	max-height: 70px;
 	width: 100%;
+	border: none;
 
 	.navbar-header {
 		h1.name-brand.navbar-brand {
@@ -23,6 +24,8 @@ nav.navbar.navbar-default {
 				color: #000;
 				padding: 10px;
 				border-radius: 5px;
+				text-transform: uppercase;
+				font-size: 15px;
 
 				&:hover {
 					background-color: gray;
