Added resume skills to bottom.

--- a/source/general_resume.html.erb
+++ b/source/general_resume.html.erb
@@ -3,12 +3,12 @@
 	<%= partial(:header) %>
 
  	<div class="row">
- 		<div class="col-sm-6 col-xs-12">
+ 		<div class="col-sm-12">
  			<ul><h3>EXPERIENCE:</h3>
  				<li>
  					<h4>Mezza Westwood</h4>
  					<h5>Head Server/ Social Media Assistant April 2015 - Present</h5>
- 					<p>I began at Mezza as a server in April and volunteered to start helping to keep its social media presence current. I contribute a weekly post to the restaurants facebook and instagram. In terms of service tasks, I supervise the nightly close and tip dispersal, and assist in various other nessecary ways.</p>
+ 					<p>I began at Mezza as a server in April and volunteered to start helping to keep its social media presence current. I contribute a weekly post to the restaurants facebook and instagram. In terms of service tasks, I supervise the nightly close and tip dispersal, schedule management, and assist in various other nessecary ways.</p>
  				</li>
  				<li>
  					<h4>Sukha Arts Center</h4>
@@ -35,10 +35,6 @@
  					<h5>Server August 2015 - December 2015</h5>
  					<p>I worked briefly as a server at this upscale seafood restaurant that originated in Asbury Park, NJ. However distance and financial instabiilty brought my time this company to a close.</p>
  				</li>
- 			</ul>
- 		</div>
- 		<div class="col-sm-6 col-xs-12">
- 			<ul>
  				<li>
  					<h4>MFRW Design</h4>
  					<h5>Junior Developer and Project Manager 09/13 – Present</h5>
@@ -71,29 +67,60 @@
  				</li>
  			</ul>
  		</div>
- 		<div class="row">
- 			<ul>
- 				<div class="col-sm-4 col-xs-12">
- 				<li><h3>EDUCATION:</h3>
- 					<h4>University of Hawaii at Manoa, Honolulu, Hawaii</h4>
- 					<p>Major: Psychology, Attended September 2007 – May 2009</p>
- 				</li>
-	 			</div>
-	 			<div class="col-sm-4 col-xs-12">
- 				<li><h3>SKILLS:</h3>
- 					<h4>Languages: Proficient: CSS3, HTML5, SASS/SCSS</h4>
- 					<h4>Familiar:  JavaScript, Ruby</h4>
- 					<h4>Tools: Bootstrap 3, Compass, Git/GitHub, jQuery, Middleman</h4>
- 				</li>
-	 			</div>
-	 			<div class="col-sm-4 col-xs-12">
- 				<li><h3>INTERESTS:</h3>
-					<h4>Drawing & Painting</h4>
-					<h4>Photography & Photo Editing</h4>
-					<h4>Cooking & Baking</h4>
+ 	</div>
+	<div class="row resume-skills">
+		<ul>
+			<div class="col-sm-6 col-xs-12">
+				<li><h3>EDUCATION:</h3>
+					<h4>University of Hawaii at Manoa</h4>
+					<h4>Honolulu, Hawaii</h4>
+					<h4>Major: Psychology</h4>
+					<h4>Attended September 2007 – May 2009</h4>
 				</li>
-				</div>
-			</ul>
+ 			</div>
+ 			<div class="col-sm-6 col-xs-12">
+				<li><h3>INTERESTS:</h3>
+					<h4>Drawing &amp; Painting</h4>
+					<h4>Photography &amp; Photo Editing</h4>
+					<h4>Cooking &amp; Baking</h4>
+					<h4>Yoga, Mat &amp; Aerial</h4>
+					<h4>Writing Blogs, Poems, Copy &amp; Stories</h4>
+				</li>
+			</div>
+		</ul>
+	</div>
+		<div class="row resume-skills">
+			<h3>SKILLS:</h3>
+			<div class="col-sm-3 col-xs-12">
+				<h4>Yoga</h4>
+				<ul>
+					<li>Mat, 200hr Certification</li>
+					<li>Aerial Yoga, Dance, &amp; Fitness</li>
+				</ul>
+			</div>
+			<div class="col-sm-3 col-xs-12">
+				<h4>Computer Programming</h4>
+				<ul>
+					<li>Languages: HTML5, CSS3, Javascript, Ruby</li>
+					<li>Tools: Git/Github, Command Line, jQuery</li>
+				</ul>
+			</div>
+			<div class="col-sm-3 col-xs-12">
+				<h4>Clerical</h4>
+				<ul>
+					<li>Typing: 70wpm</li>
+					<li>Word, Excel, Outlook, Quickbooks</li>
+					<li>Schedule Management</li>
+				</ul>
+			</div>
+			<div class="col-sm-3 col-xs-12">
+				<h4></h4>
+				<ul>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 
