added animations and updated companies and portfolio info.

--- a/source/programming_resume.html.erb
+++ b/source/programming_resume.html.erb
@@ -5,23 +5,12 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h3 id="portfolio">Porfolio of Sites</h3>
+        <h3 id="portfolio" class="aniview" av-animation="fadeInUp">Porfolio of Sites</h3>
       </div>
     </div>
-    <div class="row show-row">
+    <div class="row show-row aniview" av-animation="fadeInUp">
       <div class="col-md-6 col-xs-12">
-        <h4 class="portfolio">iDeal Furniture Outlet</h4>
-        <h5 class="portfolio">E-Commerce Spree Site</h5>
-        <p class="portfolio">This site was built by MFRW Design, and was collaborated on by myself and two other developers. I contributed to most of the frontend development and some project management, as well as an in depth look into the Rails and Spree frameworks. Using a number of tools including Bootstrap, the website is fully responsive.</p>
-        <p><%= link_to 'iDeal Furniture Outlet', 'http://ideal-furniture-outlet.herokuapp.com/' %></p>
-      </div>
-      <div class="col-md-6 col-xs-12">
-        <img class="portfolio img-responsive" src="/images/main/ideal-home.jpg" />
-      </div>
-    </div>
-    <div class="row show-row">
-      <div class="col-md-6 col-xs-12">
-        <img class="portfolio img-responsive" src="/images/main/mysite-home.jpg" />
+        <img class="portfolio img-responsive" src="/images/home/resume-home.png" />
       </div>
       <div class="col-md-6 col-xs-12">
         <h4 class="portfolio">Jacquelyn Carver</h4>
@@ -29,7 +18,7 @@
         <p class="portfolio">I built this with Middleman and Boostrap as a way to showcase all of my work in one place. This site was initially to be solely dedicated to documenting my work as a programmer, but I decided to expand it to encompass all of my work history and experience.</p>
       </div>
     </div>
-    <div class="row show-row">
+    <div class="row show-row aniview" av-animation="fadeInUp">
        <div class="col-md-6 col-xs-12">
           <h4 class="portfolio">Candescent Chaos</h4>
           <h5 class="portfolio">A Blog</h5>
@@ -41,10 +30,59 @@
     </div>
     <div class="row">
       <div class="col-md-12">
+        <h3 id="portfolio" class="aniview" av-animation="fadeInUp">Sites Contributed To</h3>
+      </div>
+    </div>
+    <div class="row show-row aniview" av-animation="fadeInUp">
+      <div class="col-md-6 col-xs-12">
+        <img class="portfolio img-responsive" src="/images/main/ideal-home.jpg" />
+      </div>
+      <div class="col-md-6 col-xs-12">
+        <h4 class="portfolio">iDeal Furniture Outlet</h4>
+        <h5 class="portfolio">E-Commerce Spree Site</h5>
+        <p class="portfolio">This site was built by MFRW Design, and was collaborated on by myself and two other developers. I contributed to most of the frontend development and some project management, as well as an in depth look into the Rails and Spree frameworks. Using a number of tools including Bootstrap, the website is fully responsive.</p>
+        <p><%= link_to 'iDeal Furniture Outlet', 'http://ideal-furniture-outlet.herokuapp.com/' %></p>
+      </div>
+    </div>
+    <div class="row show-row aniview" av-animation="fadeInUp">
+      <div class="col-md-6 col-xs-12">
+        <h4 class="portfolio">Loot Crate</h4>
+        <h5 class="portfolio">Gamers &amp; Geeks Monthly Subsciption Box</h5>
+        <p class="portfolio">I contributed to the frontend development of this site while working with the Railsdog team. Some of the main tasks I assisted with included restyling the checkout pages and adding promotional animations for savings and coupons.</p>
+        <p><%= link_to 'Loot Crate', 'https://www.lootcrate.com/' %></p>
+      </div>
+      <div class="col-md-6 col-xs-12">
+        <img class="portfolio img-responsive" src="/images/home/lootcrate.png" />
+      </div>
+    </div>
+    <div class="row show-row aniview" av-animation="fadeInUp">
+      <div class="col-md-6 col-xs-12">
+        <img class="portfolio img-responsive" src="/images/home/hivehome.png" />
+      </div>
+      <div class="col-md-6 col-xs-12">
+        <h4 class="portfolio">Hive Home</h4>
+        <h5 class="portfolio">British Gas &amp; Heating Company</h5>
+        <p class="portfolio">Another Railsdog project, I enjoyed working on the bright colored and clean lines used in the layout for the Hive Home site. I worked with another frontend developer and used Photoshop Mockups from the team graphic designer to style the general layout. Mostly, I enjoyed making a three-piece VENN diagram using CSS3.</p>
+        <p><%= link_to 'Hive Home', 'https://www.hivehome.com/products/hive-active-heating' %></p>
+      </div>
+    </div>
+    <div class="row show-row aniview" av-animation="fadeInUp">
+      <div class="col-md-6 col-xs-12">
+        <h4 class="portfolio">The Alternative Press</h4>
+        <h5 class="portfolio">Publicly Editable News Site</h5>
+        <p class="portfolio">Unfortunately, though I spent several months working on this project with the Railsdog team, the project was ultimately stopped before completion. While in progress, I mainly contributed to the mobile pages, working from mockups, to create layouts for the submission forms, news stories, and navigational menus on mobile and tablet displays.</p>
+        <p><%= link_to 'The Alternative Press', 'https://www.tapinto.net/' %></p>
+      </div>
+      <div class="col-md-6 col-xs-12">
+        <img class="portfolio img-responsive" src="/images/home/altpress.png" />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
         <h3 id="portfolio">Skills</h3>
       </div>
     </div>
-    <div class="row show-row">
+    <div class="row show-row aniview" av-animation="fadeInUp">
       <div class="col-md-4 col-xs-12">
         <h4 class="portfolio">Frontend Development</h4>
         <h5 class="portfolio">Although constantly growing, this is what I am best at:</h5>
@@ -84,37 +122,37 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        <h3 id="portfolio">Companies</h3>
+        <h3 id="portfolio"  class="aniview" av-animation="fadeInUp">Companies</h3>
       </div>
     </div>
-    <div class="row show-row">
+    <div class="row show-row aniview" av-animation="fadeInUp">
       <div class="col-md-6 col-xs-12">
         <h4 class="portfolio">MFRW Design</h4>
         <h5 class="portfolio">Mobile First Responsive Web Design</h5>
-        <p class="portfolio">This site is owned by a good friend and programming mentor of mine, Thomas Sample. He hired me to do frontend work for him several months ago and in that time I have learned so much and continue to grow. For more information, visit the company website.</p>
+        <p class="portfolio">This company is owned by a good friend and programming mentor of mine, Thomas Sample. I was hired as a frontend developer in 2013 and worked with MFRW for the next two years, substantially increasing my skill in CSS3, Javascript, and Ruby. In addition to frontened developement, I frequently worked with backend development and also assisted with client interface and schedule management. For more information, visit the company website.</p>
         <p><%= link_to 'MFRW Design', 'http://mfrwdesign.com/' %></p>
       </div>
       <div class="col-md-6 col-xs-12">
         <img class="portfolio img-responsive" src="/images/main/mfrw-home.jpg" />
       </div>
     </div>
-    <div class="row show-row">
+    <div class="row show-row aniview" av-animation="fadeInUp">
       <div class="col-md-6 col-xs-12">
         <img class="portfolio img-responsive" src="/images/main/rails-dog-home.jpg" />
       </div>
       <div class="col-md-6 col-xs-12">
         <h4 class="portfolio">Rails Dog</h4>
         <h5 class="portfolio">A Leading Developer in Spree Based E-Commerce Websites</h5>
-        <p class="portfolio">I started my employment with Rails Dog very recently. Though I have worked with Spree before, I am eager to work on many more projects with them and to learn more of the backend side of programming, well increasing my capabilities as a frontend developer too.</p>
+        <p class="portfolio">I started my employment with Rails Dog through MFRW Design. Railsdog gave me the opportunity to work with a large team of developers on a series of large scale projects for big name companies, such as GoPro and Loot Crate, whose e-commerce sites were built with Spree. I gained substantial knowledge in CSS3 styling and animations, Javascript, and worked with Ruby and Spree daily. I participated in daily company scrum calls, and used JIRA to manage project tasks with my development team.</p>
         <p><%= link_to 'Rails Dog', 'http://railsdog.com/home' %></p>
       </div>
     </div>
     <div class="row">
         <div class="col-md-12">
-          <h3 id="portfolio">Education</h3>
+          <h3 id="portfolio"  class="aniview" av-animation="fadeInUp">Education</h3>
         </div>
       </div>
-      <div class="row show-row">
+      <div class="row show-row aniview" av-animation="fadeInUp">
         <div class="col-md-6 col-xs-12">
           <h4 class="portfolio">Self-Study</h4>
           <h5 class="portfolio">Online Courses, Books, Documentation</h5>
@@ -138,10 +176,10 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <h3 id="portfolio">Contact Me</h3>
+          <h3 id="portfolio" class="aniview" av-animation="fadeInUp">Contact Me</h3>
         </div>
       </div>
-      <div class="row show-row">
+      <div class="row show-row aniview" av-animation="fadeInUp">
         <div class="col-md-3 col-sm-6 col-xs-12">
           <h4 class="portfolio">E-Mail</h4>
           <h5 class="portfolio">jacquelyn905@gmail.com</h5>
@@ -163,7 +201,5 @@
       </div>
     </div>
   </div>
-
-  <%= partial(:footer) %>
   
 </div>
