Added animations, restyled layout, added skills row.

--- a/source/general_resume.html.erb
+++ b/source/general_resume.html.erb
@@ -4,63 +4,63 @@
 
  	<div class="row">
  		<div class="col-sm-12">
- 			<ul><h3>EXPERIENCE:</h3>
- 				<li>
+ 			<ul><h3 class="aniview" av-animation="fadeInUp">EXPERIENCE:</h3>
+ 				<li class="aniview" av-animation="fadeInUp">
  					<h4>Mezza Westwood</h4>
  					<h5>Head Server/ Social Media Assistant April 2015 - Present</h5>
  					<p>I began at Mezza as a server in April and volunteered to start helping to keep its social media presence current. I contribute a weekly post to the restaurants facebook and instagram. In terms of service tasks, I supervise the nightly close and tip dispersal, schedule management, and assist in various other nessecary ways.</p>
  				</li>
- 				<li>
+ 				<li class="aniview" av-animation="fadeInUp">
  					<h4>Sukha Arts Center</h4>
  					<h5>Studio Assistant/ Yoga and Aerial Instructor December 2015 - Present</h5>
  					<p>I began working as a studio assistant in December, keeping the individual rooms clean and organized, as well as checking in morning yoga classes. After finishing my certification, I began teaching mat yoga and aerial as well.</p>
  				</li>
- 				<li>
+ 				<li class="aniview" av-animation="fadeInUp">
  					<h4>Lexington House</h4>
  					<h5>Yoga Instructor February 2016 - Present</h5>
  					<p>Teaching yoga to individuals currently in recovery through weekly 45-minute long sessions.</p>
  				</li>
- 				<li>
- 					<h4>K8ScienceMagic</h4>
+ 				<li class="aniview" av-animation="fadeInUp">
+ 					<h4>Little Labs</h4>
  					<h5>Exectutive Assistant/ Social Media and Online Coordinator</h5>
  					<p>A business owned by a good friend, I am currently assisting in getting this great idea off the drawing board and actualizing it through building a strong web presence through Facebook and Social Media, as well as helping to develop a functional site for information and processing. Although the site is built using SquareSpace, a drag and drop site building assistant for the average joe, I nevertheless have contributed time to design and styling, as well as functionality.</p>
  				</li>
- 				<li>
+ 				<li class="aniview" av-animation="fadeInUp">
  					<h4>Designs For All Times</h4>
  					<h5>Social Media Assistant</h5>
  					<p>A company dedicated to party planning and decorating, I contribute in helping to revamp pictures for frequent Instagram posts.</p>
  				</li>
- 				<li>
+ 				<li class="aniview" av-animation="fadeInUp">
  					<h4>Fish Ridgewood</h4>
  					<h5>Server August 2015 - December 2015</h5>
  					<p>I worked briefly as a server at this upscale seafood restaurant that originated in Asbury Park, NJ. However distance and financial instabiilty brought my time this company to a close.</p>
  				</li>
- 				<li>
+ 				<li class="aniview" av-animation="fadeInUp">
  					<h4>MFRW Design</h4>
  					<h5>Junior Developer and Project Manager 09/13 – Present</h5>
  					<p>Collaborated on development of several mobile first responsive web sites, Managed Accounts Receivable and Accounts Payable, provided customer service, improving client relationships and organized projects and prioritized tasks using Trello.</p>
  				</li>
- 				<li>
+ 				<li class="aniview" av-animation="fadeInUp">
  					<h4>Rails Dog</h4>
  					<h5>Frontend Developer May 2014 - December 2014</h5>
  					<p>I was a member of the corse development team in this company, participating in daily SCRUM calls, completing JIRA regulated CSS, Javascript, and Ruby tasks for a variety of sites.</p>
  				</li>
- 				<li>
+ 				<li class="aniview" av-animation="fadeInUp">
  					<h4>Mark Gallery</h4>
  					<h5>Gallery Assistant/Office Manager 01/14 - Present</h5>
  					<p>Managing Gallery Facebook page, with news and art updates. Manage gallery wordpress site, and create blog articles relating to upcoming events and popular artists. Work with Photoshop and In Design for website promotions and booklets for upcoming art shows and openings.</p>
  				</li>
- 				<li>
+ 				<li class="aniview" av-animation="fadeInUp">
  					<h4>The Curious Grape 10/12 – 04/13</h4>
  					<h5>Private Events Production Assistant</h5>
  					<p>Planned, executed, and hosted private events and wine tastings; Procured materials and established a sophisticated atmosphere for all events; Utilized social media to promote events and generate excitement; Dealt with clients in order to provide a unique theme and budget for each event.</p>
  				</li>
- 				<li>
+ 				<li class="aniview" av-animation="fadeInUp">
  					<h4>Fireflies</h4>
  					<h5>Server 2010 - 2012</h5>
  					<p>Began as a server, and continued on to gain experience in hosting and bartending, and eventually as part time manager. My duties as manager included running pre-shift meetings, supervising my shift, closing the register, dispersing tips, and managing Quickbooks.</p>
  				</li>
- 				<li>
+ 				<li class="aniview" av-animation="fadeInUp">
  					<h4>Magic of Polynesia Show</h4>
  					<h5>Cocktail Server 2006 - 2009</h5>
  					<p>Worked as a cocktail server at this magic show in Waikiki for almost three years.</p>
@@ -68,7 +68,7 @@
  			</ul>
  		</div>
  	</div>
-	<div class="row resume-skills">
+	<div class="row resume-skills aniview" av-animation="fadeInUp">
 		<ul>
 			<div class="col-sm-6 col-xs-12">
 				<li><h3>EDUCATION:</h3>
@@ -89,7 +89,7 @@
 			</div>
 		</ul>
 	</div>
-		<div class="row resume-skills">
+		<div class="row resume-skills aniview" av-animation="fadeInUp">
 			<h3>SKILLS:</h3>
 			<div class="col-sm-3 col-xs-12">
 				<h4>Yoga</h4>
@@ -123,6 +123,4 @@
 			</div>
 		</div>
 	</div>
-
-	<%= partial(:footer) %>
 </div> 
