--- a/source/stylesheets/_portfolio.scss
+++ b/source/stylesheets/_portfolio.scss
@@ -53,6 +53,7 @@ div#portfolio-page {
 			}
 			img {
 				max-height: 400px;
+				border: 5px solid black;
 			}
 			ul.portfolio {
 				text-align: left;
