Imported footer stylesheet partial.

--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -1,6 +1,7 @@
 @import 'bootstrap';
 @import 'header';
 @import 'fonts';
+@import 'footer';
 @import 'homepage';
 @import 'portfolio';
 @import 'resume';
