Added social media links and colored black.

--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -1,9 +1,9 @@
 <div class="footer">
 	<div class="row">
 		<div class="col-sm-12">
-	        <i class="fa fa-facebook-square"></i>
-	        <i class="fa fa-instagram"></i>
-	        <i class="fa fa-github-square"></i>
+	        <a href='https://www.facebook.com/jacquelyn.carver'><i class="fa fa-facebook-square"></i></a>
+	        <a href='https://www.instagram.com/jacqcar/'><i class="fa fa-instagram"></i></a>
+	        <a href='https://github.com/agnikai'><i class="fa fa-github-square"></i></a>
 		</div>
 	</div>
 	<div class="row">
