Added headshot to bottom of page.

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -9,7 +9,7 @@
 	</div>
 	<div class="row about_img_row1">
 		<div class="col-sm-12">
-			<img src="../images/home/pstrip2.jpg" class="img-responsive aniview" av-animation="flipInX"/>
+			<img src="../images/home/pstrip2.jpg" class="img-responsive aniview slow photo-strip" av-animation="fadeIn"/>
 		</div>
 	</div>
 	<div class="row about_info_row">
@@ -41,12 +41,12 @@
 		</div>
 	</div>
 	<div class="row about_info_row">
-		<div class="col-sm-12">
+		<div class="col-sm-6 col-xs-12">
+			<img src="../images/home/headshotframe.JPG" class="img-responsive aniview" av-animation="fadeInUp"/>
+		</div>
+		<div class="col-sm-6 col-xs-12">
 			<p class="aniview" av-animation="fadeInUp">I think I have found about myself that I don't want to pick a career in which I do just one thing. I have so many interests and many things that I am passionate about, that I don't want to cement my focus into just one activity. This site, I am hoping, will serve as a nexus of all things that I devote my time and creativity to. I think it's important to stay busy and to do what you love. I want to continue to grow and learn and gain experience doing the things that bring me happiness.</p>
 		</div>
 	</div>
-
-	<%= partial(:footer) %>
-
 
 </div>
