--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,7 +7,7 @@ per_page: 10
 	<div id="intro">
 		<div class="row">
 			<div class="col-sm-6 col-xs-12">
-				<img src="../images/home/headshot1.jpg" class="img-responsive headshot aniview" av-animation="slideInRight"/>
+				<img src="../images/home/headshotcolor.JPG" class="img-responsive headshot aniview" av-animation="slideInRight"/>
 			</div>
 			<div class="col-sm-6 col-xs-12">
 				<h1 class="aniview welcome" av-animation="rotateInDownLeft">It's Me, Jacquelyn</h1>
