Made small edit for consistency of job titles and work dates.

--- a/source/general_resume.html.erb
+++ b/source/general_resume.html.erb
@@ -51,8 +51,8 @@
  					<p>Managing Gallery Facebook page, with news and art updates. Manage gallery wordpress site, and create blog articles relating to upcoming events and popular artists. Work with Photoshop and In Design for website promotions and booklets for upcoming art shows and openings.</p>
  				</li>
  				<li class="aniview" av-animation="fadeInUp">
- 					<h4>The Curious Grape 10/12 – 04/13</h4>
- 					<h5>Private Events Production Assistant</h5>
+ 					<h4>The Curious Grape </h4>
+ 					<h5>Private Events Production Assistant 10/12 – 04/13</h5>
  					<p>Planned, executed, and hosted private events and wine tastings; Procured materials and established a sophisticated atmosphere for all events; Utilized social media to promote events and generate excitement; Dealt with clients in order to provide a unique theme and budget for each event.</p>
  				</li>
  				<li class="aniview" av-animation="fadeInUp">
