--- a/source/stylesheets/_resume.css.scss
+++ b/source/stylesheets/_resume.css.scss
@@ -1,8 +1,11 @@
+// YOGA RESUME>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+
 .yoga_resume {
 	h1 {
-		font-family: 'Poiret One', serif;
+		@extend %warm-fatface;
+		font-family: 'Akronim', sans-serif;
 		text-align: center;
-		font-size: 40px;
+		font-size: 70px;
 	}
 	h2 {
 		@extend %warm-fatface;
@@ -33,7 +36,15 @@
 			max-height: 400px;
 		}
 	}
+
+	#lightgallery {
+		img {
+			max-height: 400px;
+		}
+	}
 }
+
+// GENERAL RESUME>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 
 #resume-page {
 
@@ -67,6 +78,74 @@
 			@extend %Roboto;
 			font-size: 12px;
 			line-height: 2em;
+		}
+	}
+}
+
+// PROGRAMMING RESUME>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+div#portfolio-page {
+	div.portfolio-body {
+		background-color: white;
+		margin: 0 100px;
+		@media(max-width: 768px) {
+			margin: 0 50px;
+		}
+		@media(max-width: 498px) {
+			margin: 0;
+		}
+		h1#portfolio {
+			@extend %warm-fatface;
+			font-size: 60px;
+			margin: 30px 0;
+		}
+		h2#portfolio {
+			@extend %Raleway;
+			font-size: 18px;
+			color: black;
+			padding: 0;
+		}
+		h3#portfolio {
+			@extend %Poiret;
+			font-size: 50px;
+			padding: 20px 0 40px 5px;
+		}
+		div.row.show-row {
+			margin: 10px 0 60px 0;
+			h4.portfolio {
+				@extend %Roboto;
+				font-size: 25px;
+				padding: 5px 30px;
+			}
+			h5.portfolio {
+				@extend %Raleway;
+				font-size: 17px;
+				padding: 0 5px 0 35px;
+				a {
+					@extend %warm-link-font;
+					font-size: 16px;
+				}
+			}
+			p {
+				text-align: left;
+				padding: 10px 40px;
+				a {
+					// font-family: 'Raleway', serif;
+					@extend %warm-link-font;
+					font-size: 16px;
+					padding: -20px 40px;
+				}
+			}
+			img {
+				max-height: 400px;
+				border: 5px solid black;
+			}
+			ul.portfolio {
+				text-align: left;
+				li h5.portfolio a {
+					@extend %warm-link-font;
+					font-size: 14px;
+				}
+			}
 		}
 	}
 }
