Added miscellaneous page with image galleries and lightgallery jquery plugin.

--- a/source/misc.html.erb
+++ b/source/misc.html.erb
@@ -1,11 +1,11 @@
 <div id="mygallerys">
 
 	<%= partial(:header) %>
-	
+
 	<div class="row">
 		<div class="col-sm-12">
 			<h1>Yoga</h1>
-			<h2><i class="fa fa-heart"></i>Aerial, Acro, &amp; Mat</h2>
+			<h2><i class="fa fa-heart"></i>Aerial, Acro, &amp; Mat<i class="fa fa-heart"></i></h2>
 		</div>
 	</div>
 
@@ -38,16 +38,17 @@
 		</div>
 	</div>
 
+	<div class="row">
+		<div class="col-sm-12">
+			<h1>Collection of Randoms</h1>
+			<h2><i class="fa fa-heart"></i>Fun with Photography &amp; Editing<i class="fa fa-heart"></i></h2>
+		</div>
+	</div>
+
 	<div class="edit-gallery my-gallery-row">
 		<div id="edit-lightgallery">
-		  	<a href="../images/main/art.jpg">
-		      <img src="../images/main/art.jpg" />
-		  	</a>
 		  	<a href="../images/main/bread1.jpg">
 		      <img src="../images/main/bread1.jpg" />
-		  	</a>
-		  	<a href="../images/main/bread2.jpg">
-		    	<img src="../images/main/bread2.jpg" />
 		  	</a>
 		  	<a href='../images/main/bread3.jpg'>
 		  		<img src="../images/main/bread3.jpg"/>
@@ -63,9 +64,6 @@
 			</a>
 			<a href='../images/main/tahoe.jpg'>
 				<img src="../images/main/tahoe.jpg"/>
-			</a>
-			<a href='../images/main/virginia.jpg'>
-				<img src="../images/main/virginia.jpg"/>
 			</a>
 
 		</div>
