Added misc page with lightgallery plugin image galleries.

--- a/source/misc.html.erb
+++ b/source/misc.html.erb
@@ -4,6 +4,13 @@
 
 	<div class="row">
 		<div class="col-sm-12">
+			<h1>All the other things in between...</h1>
+			<h3>Additional interests and small watchyamacallits.</h3>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-sm-12">
 			<h1>Yoga</h1>
 			<h2><i class="fa fa-heart"></i>Aerial, Acro, &amp; Mat<i class="fa fa-heart"></i></h2>
 		</div>
