Removed skils column.

--- a/source/general_resume.html.erb
+++ b/source/general_resume.html.erb
@@ -91,21 +91,21 @@
 	</div>
 		<div class="row resume-skills aniview" av-animation="fadeInUp">
 			<h3>SKILLS:</h3>
-			<div class="col-sm-3 col-xs-12">
+			<div class="col-sm-4 col-xs-12">
 				<h4>Yoga</h4>
 				<ul>
 					<li>Mat, 200hr Certification</li>
 					<li>Aerial Yoga, Dance, &amp; Fitness</li>
 				</ul>
 			</div>
-			<div class="col-sm-3 col-xs-12">
+			<div class="col-sm-4 col-xs-12">
 				<h4>Computer Programming</h4>
 				<ul>
 					<li>Languages: HTML5, CSS3, Javascript, Ruby</li>
 					<li>Tools: Git/Github, Command Line, jQuery</li>
 				</ul>
 			</div>
-			<div class="col-sm-3 col-xs-12">
+			<div class="col-sm-4 col-xs-12">
 				<h4>Clerical</h4>
 				<ul>
 					<li>Typing: 70wpm</li>
@@ -113,14 +113,14 @@
 					<li>Schedule Management</li>
 				</ul>
 			</div>
-			<div class="col-sm-3 col-xs-12">
+<!-- 			<div class="col-sm-3 col-xs-12">
 				<h4></h4>
 				<ul>
 					<li></li>
 					<li></li>
 					<li></li>
 				</ul>
-			</div>
+			</div> -->
 		</div>
 	</div>
 </div> 
