--- a/source/writing_resume.html.erb
+++ b/source/writing_resume.html.erb
@@ -31,20 +31,45 @@
           <p class="portfolio">This site was also built with Middleman, using the blog extension. I built this with a dual purpose in mind, the first being to demonstrate my design and programming capabilities, and the second to serve as an example of my writing.</p>
         </div>
     </div>
-  </div>
+    <div class="row show-row aniview" av-animation="fadeInUp">
+      <div class="col-md-6 col-xs-12">
+        <h4 class="portfolio">You Shall Thrive</h4>
+        <h5 class="portfolio">Digital Marketing</h5>
+        <p class="portfolio">You Shall Thrive is a company great at providing clients with a slue of digital needs including development, copywriting, marketing, and social media coordination. I am hoping to begin work for them soon as a part-time copywriter and SEO editor.</p>
+        <p><%= link_to 'You Shall Thrive', 'http://www.youshallthrive.com/' %></p>
 
-  <div class="row">
-    <div class="col-sm-12">
-      <h3 id="portfolio" class="aniview" av-animation="fadeInUp">Social Media &amp; Copywriting</h3>
+      </div>
+      <div class="col-md-6 col-xs-12">
+        <img class="portfolio img-responsive" src="/images/home/ysthome.png" />
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-6 col-xs-12">
-        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmezzawestwood%2Fposts%2F1243006185715134%3A0&width=500" width="500" height="687" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+  
+
+    <div class="row">
+      <div class="col-sm-12">
+        <h3 id="portfolio" class="aniview" av-animation="fadeInUp">Social Media &amp; Copywriting</h3>
+      </div>
     </div>
-    <div class="col-sm-6 col-xs-12">
-        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmezzawestwood%2Fposts%2F1271812056167880&width=500" width="500" height="1000" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+    <div class="row fb-post aniview" av-animation="fadeInUp">
+      <div class="col-sm-6 col-xs-12 copy">
+        <h3>Here are a few examples of copy I wrote for facebook and instagram posts, as well as the images I photographed and edited.</h3>
+        <h3>My favorite writers employ a passion and artistry in utilizing the perfect combination of words to create rich descriptions and vivid imagery that pull the reader into the world on the page. I want to be that writer.</h3>
+        <h3>I enjoy illuminating the beautiful details of art or food or people, and bringing the best of their qualities to the attention of the (hopefully) eager listener.</h3>
+      </div>
+      <div class="col-sm-6 col-xs-12">
+          <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmezzawestwood%2Fposts%2F1243006185715134%3A0&width=400" width="400" height="650" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+      </div>
     </div>
-  </div>
+    <div class="row fb-post aniview" av-animation="fadeInUp">
+      <div class="col-sm-6 col-xs-12">
+          <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmezzawestwood%2Fposts%2F1271812056167880&width=500" width="500" height="800" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+      </div>
+      <div class="col-sm-6 col-xs-12 copy">
+        <h3>I have familiarized myself with the essentials of branding and search engine optimazation to entice readers to the marketing goal.</h3>
+        <h3>I am hoping that by continuing to produce material, my abilities as a writer will evolve to their maximum potential.</h3>
+      </div>
+    </div>
+
+    </div>
 
 </div>
