Added office jobs into resume.

--- a/source/general_resume.html.erb
+++ b/source/general_resume.html.erb
@@ -37,18 +37,23 @@
  				</li>
  				<li class="aniview" av-animation="fadeInUp">
  					<h4>MFRW Design</h4>
- 					<h5>Junior Developer and Project Manager 09/13 – Present</h5>
+ 					<h5>Junior Developer and Project Manager 09/13 – 03/15</h5>
  					<p>Collaborated on development of several mobile first responsive web sites, Managed Accounts Receivable and Accounts Payable, provided customer service, improving client relationships and organized projects and prioritized tasks using Trello.</p>
  				</li>
  				<li class="aniview" av-animation="fadeInUp">
  					<h4>Rails Dog</h4>
- 					<h5>Frontend Developer May 2014 - December 2014</h5>
+ 					<h5>Frontend Developer 05/14 - 12/14</h5>
  					<p>I was a member of the corse development team in this company, participating in daily SCRUM calls, completing JIRA regulated CSS, Javascript, and Ruby tasks for a variety of sites.</p>
  				</li>
  				<li class="aniview" av-animation="fadeInUp">
  					<h4>Mark Gallery</h4>
- 					<h5>Gallery Assistant/Office Manager 01/14 - Present</h5>
+ 					<h5>Gallery Assistant/Office Manager 01/14 - 06/14</h5>
  					<p>Managing Gallery Facebook page, with news and art updates. Manage gallery wordpress site, and create blog articles relating to upcoming events and popular artists. Work with Photoshop and In Design for website promotions and booklets for upcoming art shows and openings.</p>
+ 				</li>
+ 				<li class="aniview" av-animation="fadeInUp">
+ 					<h4>Nancy Saccente, LLC</h4>
+ 					<h5>Office Assistant 05/13 - 10/13</h5>
+ 					<p>Office Manager for a private law firm for Nancy Saccente, Attorney at Law, who mainly dealt in Real Estate and Divorce preceedings. My tasks included general office work, phone messages, filing, faxing, and mailing. </p>
  				</li>
  				<li class="aniview" av-animation="fadeInUp">
  					<h4>The Curious Grape </h4>
@@ -64,6 +69,16 @@
  					<h4>Magic of Polynesia Show</h4>
  					<h5>Cocktail Server 2006 - 2009</h5>
  					<p>Worked as a cocktail server at this magic show in Waikiki for almost three years.</p>
+ 				</li>
+ 				<li class="aniview" av-animation="fadeInUp">
+ 					<h4>Florentine Gardens</h4>
+ 					<h5>Office Assistant 20034 - 2005</h5>
+ 					<p>Catering Hall for large scale events including weddings, proms, and graduations. My job consisted of taking phone messages and office organization and filing. I assisted in copying the detailed run-downs of event preparations and nessecities for food, music, decorations, etc.</p>
+ 				</li>
+ 				<li class="aniview" av-animation="fadeInUp">
+ 					<h4>Huntington Carver</h4>
+ 					<h5>Office Assistant 2002 - 2004</h5>
+ 					<p>Law office general assistant for two and a half years. Main duties included taking detailed phone messages, organizing and filing paperwork, making copies, preparing certified and overnight mailing and faxing, and any other general task needed.</p>
  				</li>
  			</ul>
  		</div>
