--- a/source/misc.html.erb
+++ b/source/misc.html.erb
@@ -11,6 +11,12 @@
 
 	<div class="row">
 		<div class="col-sm-12">
+			<h1>Instagram Editing</h1>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-sm-12">
 			<h1>Yoga</h1>
 			<h2><i class="fa fa-heart"></i>Aerial, Acro, &amp; Mat<i class="fa fa-heart"></i></h2>
 		</div>
