Small layout changes.

--- a/source/yoga_resume.html.erb
+++ b/source/yoga_resume.html.erb
@@ -8,12 +8,10 @@
 		</div>
 	</div>
 	<div class="row cert_info yoga_row">
-		<div class="col-sm-12">
+		<div class="col-sm-6 col-xs-12">
 			<h2>Certification</h2>
 		</div>
-	</div>
-	<div class="row yoga_info_row">
-		<div class="col-sm-12">
+		<div class="col-sm-6 col-xs-12">
 			<p>I recieved my 200hr certification in Hatha Yoga from Yoga Mountain at Sukha Arts Center in Harrington Park, New Jersey on February 28th. To get this certification completed was a six month process including: three months of classroom training, a comprehensive reading list on chakras, history, philosophy, anatomy, and meditation, in the field aerial and mat yoga student teaching, alignment and sequencing training, and thirty hours of electives in which I attended class with various teachers.</p>
 		</div>
 	</div>
@@ -52,26 +50,12 @@
 		</div>
 	</div>
 
-	<div id="fun_yoga_stuff">
-		<div class="row">
-			<div class="col-sm-2 col-xs-12">
-				<img src="../images/home/mar_yoga1.jpg" class="img-responsive"/>
-			</div>
-			<div class="col-sm-2 col-xs-12">
-				<img src="../images/home/mar_yoga2.jpg" class="img-responsive"/>
-			</div>
-			<div class="col-sm-2 col-xs-12">
-				<img src="../images/home/mar_yoga3.jpg" class="img-responsive"/>
-			</div>
-			<div class="col-sm-2 col-xs-12">
-			</div>
-			<div class="col-sm-2 col-xs-12">
-			</div>
-			<div class="col-sm-2 col-xs-12">
-			</div>
+
+	<div class="row"> 
+		<div class="col-sm-12">
+			<h1>For more yoga pictures, check out the gallery <%=link_to 'here.', '/misc.html'%></h1>
 		</div>
 	</div>
 
-	<%= partial(:footer) %>
 
 </div> <!-- yoga_resume -->
